--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5927,15 +5927,15 @@ select:visited {
   top: 0px;
   bottom: 0;
   right: -350px;
-  height: 100%;
-  z-index: 101;
+  height: 1000px;
+  z-index: 209;
   position: fixed;
   width: 280px;
   overflow-y: scroll;
-  background-color: #fff;
+  background-color: #ffffff;
   padding: 40px 0px;
-  -webkit-box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.19);
-          box-shadow: 0px 3px 5px rgba(100, 100, 100, 0.19);
+  -webkit-box-shadow: 0px 3px 5px rgb(100 100 100 / 19%);
+  box-shadow: 0px 3px 5px rgb(100 100 100 / 19%);
   -webkit-transition: all 0.5s ease-in;
   -o-transition: all 0.5s ease-in;
   transition: all 0.5s ease-in;
@@ -8140,6 +8140,7 @@ select:visited {
 
   .breadcrumb_section .breadcrumb_title {
     font-size: 30px;
+    line-height: 45px;
   }
 }
 @media screen and (max-width: 320px) {
