--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7832,7 +7832,13 @@ select:visited {
   }
 
   .breadcrumb_section .breadcrumb_title {
-    font-size: 40px;
+    font-size: 28px;
+    line-height: 38px;
+  }
+
+  .text-content{
+    font-size: 22px;
+    line-height: 40px;
   }
 
   .news_post_item .news_text_area h3 {
